# kv-store

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/src/config/: settings.py  urls.py
api/src/core/: serializers.py  tests.py  utils.py  views.py
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.test.tsx  App.tsx
client/src/components/: Create.tsx  Destroy.tsx  Retrieve.tsx
