[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Chesli Jones <chesli@cheslijones.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
redis = "^4.1.2"

[tool.poetry.dev-dependencies]
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
